--- a/Produtos/pom.xml
+++ b/Produtos/pom.xml
@@ -19,12 +19,21 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.1.0</version>
+	    <scope>provided</scope>
+	</dependency>
+    
   </dependencies>
 
   <build>
@@ -69,6 +78,14 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+       	<plugin>
+		  <groupId>org.eclipse.jetty</groupId>
+		  <artifactId>jetty-maven-plugin</artifactId>
+		  <version>9.4.15-SNAPSHOT</version>
+		  <configuration>
+		    <scanIntervalSeconds>10</scanIntervalSeconds>
+		  </configuration>
+		</plugin>    
       </plugins>
     </pluginManagement>
   </build>
