--- a/Produtos/pom.xml
+++ b/Produtos/pom.xml
@@ -33,6 +33,12 @@
 	    <version>3.1.0</version>
 	    <scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/br.com.caelum.stella/caelum-stella-core -->
+	<dependency>
+	    <groupId>br.com.caelum.stella</groupId>
+	    <artifactId>caelum-stella-core</artifactId>
+	    <version>2.1.3</version>
+	</dependency>
     
   </dependencies>
 
